Fix about tag width on mobile

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -62,7 +62,7 @@
 
     p {
         font-size: 21px;
-        width: 500px;
+        max-width: 500px;
         margin: 0 auto;
         padding-bottom: 10px;
     }
